# Khawrizm-Data-Refinery

./: .gitignore  Cargo.toml  KHAWRIZM_OMNI_PROVENANCE.txt  Khawrizm_Sovereign_Core.gds  Master_Ring0.md  Master_Ring0_Merged.md  README.md  SHA256SUMS_V3.txt  VAULT_INTEGRITY.txt  airgapped_sanitizer.py  api_sanitizer.py  build.rs  build_sovereign.sh  deploy_manifesto.sh  ebpf_airgap_enforcer.c  fpga_synthesizer.sh  grinder_pipeline.sh  index.html  joyride_networking.c  khawrizm_isa_extensions.scala  khawrizm_search.py  llm_ffi_bridge.rs  pq_provenance.rs  ring0_ai_governor.cpp  ring0_core.rs  ring0_extractor.py  ring0_monolith.rs  ring0_unikernel.rs  sovereign_sanitizer.rs  synth_KhawrizmSystem.v  tee_hardware_enclave.c
Deployment/: AutoHarden_Omni.ps1
KHAWRIZM_OFFICE_RELEASE/: README_AR.txt
KHAWRIZM_OFFICE_V3_RELEASE/: RELEASE_NOTES_V3.txt  SHA256SUMS.txt
KHAWRIZM_RELEASE/: MANIFEST.txt  MANIFEST.txt.sig  khawrizm_browser  launch_sovereign.sh  xcv_engine
Khawrizm_Browser/src/: main.rs
Khawrizm_Grid/: index.html  package-lock.json  package.json
Khawrizm_Grid/src/: App.css  App.tsx
Khawrizm_Grid/src-tauri/: Cargo.toml  tauri.conf.json
XCV_Engine/: Cargo.toml  auto_stub.sh  build.rs
XCV_Engine/src/: grid.rs  impress_wrapper.cpp  impress_wrapper.h  lexer.rs  lib.rs  main.rs  taco.rs  writer_wrapper.cpp  writer_wrapper.h  (+2 more)
safe_payloads/: chunk_1.md  chunk_10.md  chunk_11.md  chunk_12.md  chunk_13.md  chunk_14.md  chunk_15.md  chunk_16.md  chunk_17.md  chunk_18.md  chunk_19.md  chunk_2.md  chunk_20.md  chunk_21.md  chunk_22.md  chunk_23.md  chunk_24.md  chunk_25.md  chunk_26.md  chunk_27.md  chunk_28.md  chunk_29.md  chunk_3.md  chunk_30.md  chunk_31.md  chunk_32.md  chunk_33.md  chunk_34.md  chunk_35.md  chunk_36.md  chunk_37.md  chunk_38.md  chunk_39.md  chunk_4.md  chunk_40.md  chunk_41.md  chunk_42.md  chunk_43.md  chunk_44.md  chunk_5.md  (+4 more)
(+15 files in other folders)
