[package]
name = "khawrizm-data-refinery"
version = "1.4.0"
edition = "2021"

[[bin]]
name = "ring0_core"
path = "ring0_core.rs"

[[bin]]
name = "sovereign_sanitizer"
path = "sovereign_sanitizer.rs"

[dependencies]
memmap2 = "0.9"
rayon = "1.10"
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
flate2 = "1"
zip = "0.6"
