[package]
name = "khawrizm-data-refinery"
version = "1.6.0"
edition = "2021"

[[bin]]
name = "ring0_unikernel"
path = "ring0_unikernel.rs"

[[bin]]
name = "pq_provenance"
path = "pq_provenance.rs"

[dependencies]
# Unikernel / HermitCore for bare-metal boot
hermit-sys = { version = "0.5", optional = true }
# Hardware enclave (conceptual; actual TEE via platform crates or asm)
# pqcrypto for post-quantum provenance
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.5"
# Retain core for compatibility in hybrid builds
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
flate2 = "1"
zip = "0.6"

[features]
default = []
unikernel = ["hermit-sys"]
