[package]
name = "khawrizm-data-refinery"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "ring0_core"
path = "ring0_core.rs"

[[bin]]
name = "ring0_monolith"
path = "ring0_monolith.rs"

[[bin]]
name = "pq_provenance"
path = "pq_provenance.rs"

[[bin]]
name = "khawrizm_browser"
path = "Khawrizm_Browser/src/main.rs"

[dependencies]
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
flate2 = "1"
zip = "0.6"
quick-xml = "0.31"
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.5"
pqcrypto-traits = "0.3"
tokio = { version = "1", features = ["full"] }
